--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	<ul>
+	<li> <a href="www.google.in">Home</a></li>
+	<li> <a href="www.wikipedia.in">About us</a></li>
+	<li> <a href="www.help.in">Home</a>Contact us</li>
+	</ul>
+<h3>water droplet></h3>
+	<img src="https://picsum.photos/id/123/200/300" alt="drop">
+<h3>Boat in pond</h3>	
+	<img src="https://picsum.photos/id/124/200/300" alt = "boat in pond">
+<h3>evening mountain	
+	<img src = "https://picsum.photos/id/125/200/300" alt = "grass">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
