--- a/main.html
+++ b/main.html
@@ -7,11 +7,14 @@
 </head>
 
 <body>
+	<nav>
+	
 	<ul>
 	<li> <a href="www.google.in">Home</a></li>
 	<li> <a href="www.wikipedia.in">About us</a></li>
 	<li> <a href="www.help.in">Contact us</a></li>
 	</ul>
+	</nav>
 <h3>water droplet</h3>
 	<img src="https://picsum.photos/id/123/200/300" alt="drop">
 <h3>Boat in pond</h3>	
