--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<nav>
 	
 	    <ul>
-	             <li> <a href="www.google.in">Home</a></li>
-	            <li> <a href="www.wikipedia.in">About us</a></li>
-	            <li> <a href="www.help.in">Contact us</a></li>
+	              <a href="www.google.in">Home</a>
+	             <a href="www.wikipedia.in">About us</a>
+	            <a href="www.help.in">Contact us</a>
   	   </ul>
 	</nav>
 
