--- a/main.html
+++ b/main.html
@@ -8,16 +8,15 @@
 
 <body>
 	<nav>
-	
-	    <ul>
-	              <a href="www.google.in">Home</a>
-	             <a href="www.wikipedia.in">About us</a>
-	            <a href="www.help.in">Contact us</a>
-  	   </ul>
+	<ul>
+    <a href="www.google.in">Home</a>
+    <a href="www.wikipedia.in">About us</a>
+	<a href="www.help.in">Contact us</a>
+  	</ul>
 	</nav>
 
 	
-<h1>water droplet</h1>
+<h1>3 random images</h1>
 	<img src="https://picsum.photos/id/123/200/300" alt="drop">
 
 	<img src="https://picsum.photos/id/124/200/300" alt = "boat in pond">
